--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -119,7 +119,7 @@
     border: 2px solid #000;
   }
   .c-header__menu li:nth-child(6):hover {
-    background: rgba(56,71,168,0.7);
+    background: rgba(56,71,168,0.8);
   }
   .c-header__menu li:nth-child(7):hover {
     background: rgba(255,245,228,0.8);
@@ -312,10 +312,10 @@ input[type="checkbox"]:checked + ul {
   padding: 1rem;
 }
 .c-home__content .h2 {
-  font-size: 2.5rem;
+  font-size: 3rem;
   font-weight: 500;
   text-shadow: 3px 2px 3px #07102a;
-  padding: 1rem;
+  padding: 1rem 2rem;
 }
 .c-home__content .film {
   display: none;
@@ -331,11 +331,11 @@ input[type="checkbox"]:checked + ul {
             text-decoration-line: underline;
   }
 }
-.c-home__content .play {
+.c-home__content .play-icon {
   display: none;
 }
 @media only screen and (min-width: 992px) {
-  .c-home__content .play {
+  .c-home__content .play-icon {
     display: inline;
     font-size: 2rem;
     position: relative;
@@ -351,7 +351,7 @@ input[type="checkbox"]:checked + ul {
 .c-home__button-2 {
   display: inline-block;
   margin: 4rem 1.5rem 1rem;
-  padding: 1.5rem 2rem;
+  padding: 1.5rem 1.5rem;
   border-radius: 5px;
   font-size: 2.6rem;
 }
@@ -376,7 +376,28 @@ input[type="checkbox"]:checked + ul {
 }
 @media only screen and (max-width: 320px) {
   .c-home__button-2 {
-    margin-left: 13rem;
+    margin-left: 14rem;
+    margin-top: 1.5rem;
+  }
+}
+.c-home__video {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: flex-start;
+}
+@media only screen and (min-width: 769px) {
+  .c-home__video {
+    align-items: center;
+  }
+}
+.c-home__video .main-video {
+  margin-top: 15rem;
+  width: 90vw;
+}
+@media only screen and (min-width: 769px) {
+  .c-home__video .main-video {
+    margin-top: 0;
   }
 }
 .c-svg {
